# device_3d

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
device_3d/: CMakeLists_common.txt  config.hpp  main.cpp
device_3d/application/: application.cpp  application.h  config.cpp  config.h  tripod.cpp  tripod.h
device_3d/conductors/: conductor_circle.cpp  dream.cpp  dream.h  kick.cpp  kick.h
device_3d/creatures/: creature.h
device_3d/creatures/bike/: bike.cpp  bike.h
device_3d/creatures/table/: joint.cpp  joint.h  leg.cpp  leg.h  table.cpp  table.h
device_3d/data_processing_methods/: data_processing_method.cpp  data_processing_method.h  data_processing_method_linearly_single.h
device_3d/gpu/cuda/: CMakeLists.txt  config.cfg
device_3d/physical_objects/: figure.cpp  figure.h  sphere.cpp
device_3d/scenes/: bike_scene.cpp  bike_scene.h  scene.cpp  scene.h  table_scene.cpp  table_scene.h
device_3d/sensors/: acceleration.h  distance.cpp  distance.h  gyroscope.h  sensor.h  time.cpp  time.h  velocity.h  vestibular.h  video.cpp  video.h
device_3d/teachers/: teacher.cpp  teacher.h  teacher_walking.cpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists_common.txt  config.h  config.hpp  creature.cpp  creature.h  device_3d.pro  leg.cpp  leg.h  main.cpp  run.sh  tripod.cpp  tripod.h  world_3d.cpp  world_3d.h
src/application/: application.cpp  application.h  config.cpp  config.h  tripod.cpp  tripod.h
src/conductors/: conductor.cpp  conductor.h  conductor_circle.cpp  conductor_circle.h  tail.h
src/cpu/: CMakeLists.txt  config.cfg
src/creatures/: creature.cpp  creature.h  joint.cpp  joint.h  leg.cpp  leg.h
src/creatures/bike/: bike.cpp  bike.h
src/creatures/sensors/: acceleration.cpp  acceleration.h  distance.cpp  distance.h  gyroscope.cpp  gyroscope.h  veloсity.cpp  veloсity.h
src/creatures/table/: joint.cpp  joint.h  leg.cpp  leg.h  table.cpp  table.h
src/data_processing_methods/: data_processing_method.cpp  data_processing_method.h  data_processing_method_base.cpp  data_processing_method_base.h  data_processing_method_binary.cpp  data_processing_method_binary.h  data_processing_method_linearly.cpp  data_processing_method_linearly.h  data_processing_method_linearly_single.cpp  data_processing_method_linearly_single.h  data_processing_method_logarithmic.cpp  data_processing_method_logarithmic.h
src/device_3d/: CMakeLists.txt  CMakeLists_common.txt  config.hpp
src/device_3d/application/: application.cpp  application.h  config.cpp
src/device_3d/conductors/: tail.cpp
src/device_3d/cpu/: CMakeLists.txt
src/gpu/cuda/: CMakeLists.txt  config.cfg
src/phys_obj/: cube.cpp  cube.h  figure.cpp  figure.h  sphere.cpp  sphere.h
src/physical_objects/: cube.cpp  cube.h  figure.cpp  figure.h  sphere.cpp  sphere.h
src/resources/: readme.txt
src/scene/: tripod.cpp  tripod.h  world_3d.cpp  world_3d.h
src/scenes/: bike_scene.cpp  bike_scene.h  scene.cpp  scene.h  table_scene.cpp  table_scene.h
src/sensors/: acceleration.cpp  acceleration.h  distance.cpp  distance.h  gyroscope.cpp  gyroscope.h  sensor.h  time.cpp  time.h  velocity.cpp  velocity.h  vestibular.h  video.cpp  video.h
src/submodules/: CMakeLists.txt
src/teachers/: teacher.cpp  teacher.h  teacher_base.cpp  teacher_base.h  teacher_walking.cpp  teacher_walking.h
(+25 files in other folders)
